tests/ui/missing-item.stderr
error: unexpected end of input, expected `item`
 --> $DIR/missing-item.rs:7:1
  |
7 | #[async_stream] //~ ERROR unexpected end of input, expected `item`
  | ^^^^^^^^^^^^^^^
